# glycan-pipeline

./: HS_SEQ_v1.0.0.7z  PlotMCE3DSpectrum.cpp  PlotMCE3DSpectrumTest.cpp  Program instruction.txt  ProjectHome.md  ResultsInterpretation.md
.metadata/.plugins/org.eclipse.cdt.core/: preferences
.metadata/.plugins/org.eclipse.core.resources/.root/: 15.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml
GAG/: CMakeLists.txt
GAG/config/: commongroup.xml  systemparameters.xml
GAG/extra_lib/alglib-3.7.0/src/: dataanalysis.h  linalg.h
GAG/src/GAGPL/CHEMISTRY/: Composition.cpp  Composition.h  Element.cpp  Element.h  FunctionalGroupTable.cpp  FunctionalGroupTable.h  Modification.cpp  Modification.h  ModificationTable.h  Modifier.cpp  Modifier.h  PeriodicTable.cpp  PeriodicTable.h
GAG/src/GAGPL/FRAGMENTATION/: Fragmentation.cpp  Fragmentation.h  FragmentationParams.h  FragmentationTable.cpp  FragmentationTable.h
GAG/src/GAGPL/GAGLIBRARY/: CleavageTree.h  LibraryForest.cpp  LibraryForest.h  LibraryMatchMain.cpp  LibraryMatching.h  LibraryTree.cpp  LibraryTree.h  NaiveMethods.cpp  NaiveMethods.h  SequencePrediction.cpp
GAG/src/GAGPL/GLYCAN/: Branch.cpp  GlycanComposition.cpp  GlycanComposition.h  GlycanSequence.cpp  GlycanSequence.h  InternalSite.h  Monosaccharide.cpp  Monosaccharide.h
GAG/src/GAGPL/GUI/: mainframe.cpp
GAG/src/GAGPL/IO/: SequenceReader.cpp
GAG/src/GAGPL/MATH/: Calculation.h  Combination.h  NewtonGirardFormulae.cpp  NewtonGirardFormulae.h  VietesFormulae.cpp
GAG/src/GAGPL/MISC/: Param.cpp
GAG/src/GAGPL/SPECTRUM/: AverageFormulae.cpp  CandidateEnvelop.h  Envelop.cpp  EnvelopReference.cpp  IsotopicConstants.cpp  IsotopicDistribution.cpp  MonoPeak.h  PeakList.cpp  (+6 more)
GAG/test/: BranchTest.cpp  CMakeLists.txt  CandidateEnvelopTest.cpp  CombinationTest.cpp  CompositionTest.cpp  EnvelopFinderTest.cpp  FragmentationTest.cpp  FunctionalGroupTest.cpp  GlycanSequenceTest.cpp  LibraryForestTest.cpp  LibraryTreeTest.cpp  MonosaccharideTableTest.cpp  NewtonGirardFormulaeTest.cpp  PeriodicTableTest.cpp  PseudoclusterFinderTest.cpp  VietesFormulaeTest.cpp  binsearch.cpp
read_pwiz/: Jamfile.jam  Jamfile.jam.bak  RawToMSData.cpp  RawToMSData.hpp
trunk/GAG/: CMakeLists.txt
trunk/GAG/config/: fragmentation.xml  modification.xml  monosaccharide.xml  systemparameters.xml
trunk/GAG/src/: CMakeLists.txt
trunk/GAG/test/: BranchTest.cpp  CMakeLists.txt  CompositionTest.cpp  FragmentationTest.cpp  GlycanSequenceTest.cpp  IsotopicDistributionTest.cpp  ModificationTest.cpp  ModifierTest.cpp  NaiveMethodsTest.cpp  ParamTest.cpp  PeakListTest.cpp  SequencePredictionTest.cpp  SequenceReaderTest.cpp  SequenceSpaceTest.cpp  SimpleFinderTest.cpp
trunk/read_pwiz/: PlotMCE3DSpectrum.hpp  RawToMSDataTest.cpp
wiki/: ResultsInterpretation.wiki
(+72 files in other folders)
